apps/hellx/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hellx-stable
  namespace: hellx
  annotations:
    external-dns.alpha.kubernetes.io/hostname: hellx.diegoluisi.eti.br
  labels:
    app: hellx
    backstage.io/kubernetes-id: hellx
spec:
  type: ClusterIP
  ports:
  - name: tcp-node
    port: 8080
  selector:
    app: hellx

---
apiVersion: v1
kind: Service
metadata:
  name: hellx-canary
  namespace: hellx
  annotations:
    external-dns.alpha.kubernetes.io/hostname: hellx.diegoluisi.eti.br
  labels:
    app: hellx
    backstage.io/kubernetes-id: hellx
spec:
  type: ClusterIP
  ports:
  - name: tcp-node
    port: 8080
  selector:
    app: hellx
