apps/hellx/base/virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hellx-vsvc
  namespace: hellx
spec:
  gateways:
  - istio-system/istio-gateway
  hosts:
  - hellx.diegoluisi.eti.br
  http:
  - name: primary
    route:
    - destination:
        host: hellx-stable
      weight: 100
    - destination:
        host: hellx-canary
      weight: 0
